# inspire_hands

./: README.md  fingertracking.py  hand_crawl.py  inspire-test.py  inspire_hand_modbus_proper.py  pyproject.toml  setup.py
examples/: hand_asl.py  hand_crawl.py  hand_demo.py  inspire-test.py  inspire_hand_modbus_proper.py  testing.py
inspire_hand/: __init__.py  cli.py  hand.py  modbus.py
inspire_hand.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
